@@ -224,6 +224,18 @@
       a directory called fll-sw that contains the various zip files referenced
       here.  This directory is the same as the /fll directory on the cd.</p>
 
+    <p>If you do not have a zip tool to open up the archives you can use
+    the jar tool that comes with Java.
+      <ol>
+        <li>Install Java</li>
+        <li>Copy the zip file to the directory you want to uncompress it in</li>
+        <li>Open a command prompt, on windows use Start->Run->command return</li>
+        <li>Change to the directory you put the zip file in, on windows cd &lt;path to zip file&gt;</li>
+        <li>Execute jar -xf zipfile</li>
+        <li>You should now have the files uncompressed in a directory and you can move them around as needed.</li>
+      </ol>
+    </p>
+      
     <p>Links in <b>bold</b> are external links to sites where the applications
       can be found if you don't have a cd.</p>
     
